--- a/backends/frontend/src/CSS/Home.css
+++ b/backends/frontend/src/CSS/Home.css
@@ -1,31 +1,36 @@
 .gridview {
   width: 98vw;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
-  grid-template-rows: repeat(auto-fill, minmax(15rem, auto));
-  grid-gap: 2px;
-  padding: 2px;
+  grid-template-columns: repeat(auto-fit, minmax(15rem, auto));
+  grid-template-rows: repeat(auto-fit, minmax(15rem, auto));
+  grid-gap: auto;
   overflow: hidden;
   overflow-x: hidden;
-  justify-items: center;
-  align-items: center;
+ /* justify-items: center;
+  align-items: center;*/
+margin: auto;
 }
 
 
 .CardImg {
   /* transform: linear; */
-  height: 200px;
+  max-height: 500px;
+  height: 20rem;
   width: 100%;
   aspect-ratio: '3/2';
   border: 2px solid #00bfff;
   border-radius: 10px;
   background-color: #f8f8f8;
   animation: glow 1s infinite alternate;
-
+  
 }
 
 .CardImg:hover {
   scale: 1.1;
+  border: 2px solid #ff0000;
+  background-color: #f8f8f8;
+  animation: hoverglow 1s infinite alternate;
+
 }
 
 .sale-price {
@@ -45,6 +50,15 @@
   text-overflow: ellipsis;
   line-height: 16px;
 }
+
+@keyframes hoverglow {
+  0% {
+    box-shadow: 0 0 0px #fff, 0 0 1px #fff, 0 0 2px #fff, 0 0 3px #ff0000, 0 0 6px #ff0000, 0 0 7px #ff0000, 0 0 9px #ff0000, 0 0 15px #ff0000;
+  }
+
+  100% {
+    box-shadow: 0 0 10px #fff, 0 0 2px #fff, 0 0 3px #fff, 0 0 4px #ff0000, 0 0 7px #ff0000, 0 0 8px #ff0000, 0 0 10px #ff0000, 0 0 15px #ff0000;
+  }}
 
 @keyframes glow {
   0% {
@@ -80,7 +94,12 @@
   overflow: hidden;
   background-color: #171717;
   color: white;
+  transition: opacity 0.6s ease;
 
+}
+
+.gridview:hover > :not(:hover){
+  opacity: 0.4;
 }
 
 .imageOverContain{
@@ -94,7 +113,7 @@ a {
   text-decoration: none;
 }
 
-
+/*
 @media screen and (max-width: 399px) {
   body {
     width: 99vw;
@@ -138,8 +157,9 @@ a {
   .gridview {
     padding: 20px;
     width: 98%;
-    grid-template-columns: repeat(auto-fit, minmax(8rem, auto));
+    grid-template-columns: repeat(auto-fill, minmax(14rem, auto));
     grid-template-rows: repeat(auto-fill, minmax(10rem, auto));
+    gap: 1rem;
     max-height: calc(14rem * 3 + 4px * 2);
     margin-bottom: 20px;
 
@@ -149,15 +169,16 @@ a {
   
 
   .cardStyle {
-    transform: scale(.5);
+   /* transform: scale(.5);
     transform-origin: center center;
-  }
+  }*//*}
   
   .cardStyle:hover{
-    transform: scale(.5) rotateY(20deg);
+   /* transform: scale(.5) rotateY(20deg);
     .imageOverContain{
       visibility: visible;
     }
+    *
   }
 }
 
@@ -168,11 +189,11 @@ a {
     grid-template-columns: repeat(auto-fill, minmax(7.5rem, 1fr));
     grid-template-rows: repeat(auto-fill, minmax(12rem, auto));
   }
-
+/*
   .cardStyle {
     transform: scale(.5);
     transform-origin: center center;
-  }
+  }*
 }
 
 @media screen and (min-width: 1200px) {
@@ -190,3 +211,5 @@ a {
   }
 
 }
+
+*/
